# claude_gen_fastapi

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  schemas.py
app/models/: __init__.py  item.py
tests/functional/: test_endpoints.py
tests/integration/: test_database.py
